--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.1.9/miui_MI6_20.1.9_478bfa515a_9.0.zip
+  ROM_URL: https://bigota.d.miui.com/20.1.9/miui_DAVINCI_20.1.9_c0df195b92_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
