--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/7.11.16/miui_MI3TD_7.11.16_314dc4c6a1_4.4.zip
+  ROM_URL: http://bigota.d.miui.com/9.9.3/miui_MI6X_9.9.3_3ad06bc283_9.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
