--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/9.6.20/miui_DAVINCI_9.6.20_5550222ae2_9.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://firmware.meizu.com/Firmware/Flyme/m6/8.0.5.0/cn/20200710165923/1c437b64/update.zip
+  ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
 jobs:
