--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/9.9.2/miui_HM5Plus_9.9.2_38e86b99ac_8.1.zip
+  ROM_URL: https://bigota.d.miui.com/20.1.9/miui_DAVINCI_20.1.9_c0df195b92_10.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
