--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.1.9/miui_DAVINCI_20.1.9_c0df195b92_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/9.9.3/miui_MI8_9.9.3_0fb85e6431_9.0.zip
   ROM_NAME: MIUI
   TZ: Asia/Shanghai
 
@@ -61,7 +61,7 @@ jobs:
        - name: Upload GSI to BitSend
          run: |
               curl -sL https://git.io/file-transfer | sh
-              ./transfer tmp final/GSI.zip
+              ./transfer bit final/GSI.zip
 
          
             
